src/test/ui/associated-type-bounds/rpit.stderr
error: higher kinded lifetime bounds on nested opaque types are not supported yet
  --> $DIR/rpit.rs:42:43
   |
LL | fn def_et4() -> impl Tr1<As1: for<'a> Tr2<'a>> {
   |                                           ^^
   |
   = help: See https://github.com/rust-lang/rust/issues/96194 for further details

error: aborting due to previous error

